# Matrix_Determinant

./: CMakeLists.txt  README.md  main.c  matrix_data.txt
Headers/: inform.h
Sources/: calculus.c  file.c  interact.c
